--- a/cmd/index.html
+++ b/cmd/index.html
@@ -3,20 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Terminal</title>
+  <title>Hacker Chat Terminal</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="scanlines"></div>
   <div id="noise"></div>
   <div id="terminal">
-    <div id="output"></div>
-    <div id="input-line">
-      <span class="prompt">user@hackterm:~$</span>
-      <input type="text" id="command-input" autocomplete="off" spellcheck="false">
+    <div id="header">
+      <h1 id="title">> HACKER CHAT <span class="blinking-cursor">_</span></h1>
+      <div id="connection-status" class="connected">ONLINE</div>
+    </div>
+    <div id="chat-box"></div>
+    <div id="input-area">
+      <span class="prompt">></span>
+      <input type="text" id="msg-input" placeholder="Type message..." autocomplete="off">
+      <button id="send-btn" onclick="sendMessage()">↵</button>
     </div>
   </div>
-  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
